src/test/run-pass/const-enum-byref.rs
// Copyright 2013 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

enum E { V, VV(int) }
static C: E = V;

fn f(a: &E) {
    match *a {
        V => {}
        VV(..) => fail!()
    }
}

pub fn main() {
    f(&C)
}
